--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "scripts": {
     "prepare": "npm run build",
     "build": "rimraf dist/* && rollup -c build/rollup.config.prod.js && npm run build:css && npm run postcss",
-    "build:css": "node-sass ./src -o ./dist --output-style compressed -x",
+    "build:css": "sass src/styles:dist --no-source-map",
     "dev": "rollup -c build/rollup.config.dev.js --watch",
     "postcss": "postcss ./dist/**/*.css -r --no-map",
     "test:unit": "jest"
@@ -45,7 +45,6 @@
     "@babel/preset-env": "^7.7.1",
     "autoprefixer": "^9.7.1",
     "babel-core": "^7.0.0-bridge.0",
-    "node-sass": "^4.13.0",
     "postcss": "^7.0.21",
     "postcss-cli": "^6.1.3",
     "rimraf": "^3.0.0",
@@ -59,6 +58,7 @@
     "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-terser": "^5.1.2",
     "rollup-plugin-vue": "^4.2.0",
+    "sass": "^1.44.0",
     "vue": "^2.6.10",
     "vue-template-compiler": "^2.6.10"
   },
