--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jonasclement/vue-accessible-select",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "private": false,
   "description": "Vue.js component for accessible selects",
   "keywords": [
@@ -45,6 +45,7 @@
     "@babel/preset-env": "^7.7.1",
     "autoprefixer": "^9.7.1",
     "babel-core": "^7.0.0-bridge.0",
+    "node-sass": "npm:sass@^1.44.0",
     "postcss": "^7.0.21",
     "postcss-cli": "^6.1.3",
     "rimraf": "^3.0.0",
