--- a/package.json
+++ b/package.json
@@ -37,32 +37,30 @@
     "postcss": "postcss ./dist/**/*.css -r --no-map",
     "test:unit": "jest"
   },
-  "dependencies": {
-    "pug": "^2.0.4"
-  },
   "devDependencies": {
-    "@babel/core": "^7.7.0",
-    "@babel/preset-env": "^7.7.1",
-    "autoprefixer": "^9.7.1",
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.7",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-replace": "^3.0.1",
+    "autoprefixer": "^10.4.2",
     "babel-core": "^7.0.0-bridge.0",
-    "node-sass": "^4.13.0",
-    "postcss": "^7.0.21",
-    "postcss-cli": "^6.1.3",
-    "rimraf": "^3.0.0",
-    "rollup": "^1.26.3",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-livereload": "^1.0.3",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-serve": "^1.0.1",
-    "rollup-plugin-terser": "^5.1.2",
-    "rollup-plugin-vue": "^4.2.0",
-    "vue": "^2.6.10",
-    "vue-template-compiler": "^2.6.10"
+    "node-sass": "^7.0.1",
+    "postcss": "^8.4.5",
+    "postcss-cli": "^9.1.0",
+    "pug": "^3.0.2",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.63.0",
+    "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-serve": "^1.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-vue": "^4.7.2",
+    "vue": "^2.6.14",
+    "vue-template-compiler": "^2.6.14"
   },
   "peerDependencies": {
-    "vue": "^2.6.10"
+    "vue": "^2.6.14"
   }
 }
