--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-replace": "^3.0.1",
+    "@vue/compiler-sfc": "^3.2.31",
     "autoprefixer": "^10.4.2",
     "babel-core": "^7.0.0-bridge.0",
     "node-sass": "npm:sass@^1.44.0",
@@ -56,12 +57,11 @@
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-vue": "^4.7.2",
-    "vue": "^2.6.14",
-    "vue-template-compiler": "^2.6.14"
+    "rollup-plugin-vue": "^6.0.0",
+    "vue": "^3.2.31"
   },
   "peerDependencies": {
-    "vue": "^2.6.14"
+    "vue": "^3.2.31"
   },
   "dependencies": {
     "keycode-js": "^3.1.0"
