--- a/package.json
+++ b/package.json
@@ -25,43 +25,35 @@
     "dist",
     "types/*.d.ts"
   ],
-  "main": "dist/vue-accessible-select.js",
+  "main": "dist/vue-accessible-select.umd.js",
   "unpkg": "dist/vue-accessible-select.min.js",
-  "module": "dist/vue-accessible-select.esm.js",
+  "module": "dist/vue-accessible-select.es.js",
   "types": "types/index.d.ts",
   "scripts": {
     "prepare": "npm run build",
-    "build": "rimraf dist/* && rollup -c build/rollup.config.prod.js && npm run build:css && npm run postcss",
+    "build": "rimraf dist/* && vite --mode production --config build/vite.config.js build && npm run build:css && npm run postcss",
     "build:css": "sass src/styles:dist --no-source-map",
-    "dev": "rollup -c build/rollup.config.dev.js --watch",
+    "dev": "vite --config build/vite.config.js",
     "postcss": "postcss ./dist/**/*.css -r --no-map",
     "test:unit": "jest"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@rollup/plugin-replace": "^3.0.1",
-    "@vue/compiler-sfc": "^3.2.31",
     "autoprefixer": "^10.4.2",
     "babel-core": "^7.0.0-bridge.0",
-    "node-sass": "npm:sass@^1.44.0",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
     "pug": "^3.0.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.63.0",
-    "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-serve": "^1.1.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-vue": "^6.0.0",
-    "vue": "^3.2.31"
+    "sass": "1.49.9",
+    "vite": "^2.8.6",
+    "vite-plugin-vue2": "^1.9.3",
+    "vue": "^2.6.14",
+    "vue-template-compiler": "^2.6.14"
   },
   "peerDependencies": {
-    "vue": "^3.2.31"
+    "vue": "^2.6.14"
   },
   "dependencies": {
     "keycode-js": "^3.1.0"
